# ImSTORM

./: README.md  app.py  hello.py  pyproject.toml  requirements.txt
.arkitekt_next/: builds.yaml  deployments.yaml  manifest.yaml
.arkitekt_next/flavours/vanilla/: Dockerfile
microEye/: __init__.py
microEye/fitting/: fit.py
