[project]
name = "imstorm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "arkitekt-next[all]==0.16",
    "matplotlib>=3.10.3",
    "numba>=0.61.2",
    "numpy<2",
    "ome-types>=0.6.1",
    "opencv-python-headless>=4.5,<4.6",
    "rekuest-next==0.12.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "tifffile>=2025.6.11",
]
